gitignore to remove needless files

--- a/Scheduler.Web/Properties/launchSettings.json
+++ b/Scheduler.Web/Properties/launchSettings.json
@@ -13,7 +13,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "YourProjectName": {
+    "Scheduler": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
