--- a/Scheduler.Web/clientapp/package.json
+++ b/Scheduler.Web/clientapp/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.4.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
